--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,4 @@
 <h1><%= @project.name%></h1>
 <p>Project details being developed...</p>
+
+<%= button_to "Delete Project", project_path(@project), method: :delete%>
